--- a/view/css/choose-fund.css
+++ b/view/css/choose-fund.css
@@ -28,3 +28,36 @@ a, a:hover {
     padding: 10px;
 	text-decoration:none;
 }
+
+/**Userguide**/	
+.userguide-dl {
+	clear: both;
+    text-align: center;
+    width: 100%;
+	margin-top: 70px;
+	}
+	
+.userguide-dl img {
+	height: 217px;
+    width: 224px;
+	box-shadow: 0 5px 10px rgba(100, 100, 100, 0.3);
+	margin-bottom: 10px;
+	}
+	
+.userguide-dl a, a:hover {
+	background: none;
+    border-radius: 9;
+    color: none;
+	text-decoration:none;
+}
+
+	
+.userguide-dl p {
+	color:#555;
+	text-decoration:none;
+	font-size:10px;
+	width:100%;
+	text-align:center;
+	clear:both;
+	}
+	
